# macroscript

./: 1  Cargo.toml  README.md
src/: execution.rs  lib.rs  parsing.rs  stdlib.rs  test.rs  textmacro.rs
tests/: test.rs
