[package]
name = "macroscript"
version = "0.6.0"
edition = "2021"
authors = ["baltdev"]
description = "A reimplementation of my macroscript programming language."
license = "MIT"
repository = "https://github.com/balt-dev/macroscript"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13"
rand_pcg = "0.3" 
rand = "0.8"
seahash = "4"
regex = "1"



getrandom = {version = "0.2", optional = true}


[features]
js = ["dep:getrandom", "getrandom/js"]
